--- a/WorkerService1/Dockerfile
+++ b/WorkerService1/Dockerfile
@@ -1,27 +1,21 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
-USER app
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-# Install clang/zlib1g-dev dependencies for publishing to native
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    clang zlib1g-dev
-ARG BUILD_CONFIGURATION=Release
+USER app
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG configuration=Release
 WORKDIR /src
 COPY ["WorkerService1/WorkerService1.csproj", "WorkerService1/"]
-RUN dotnet restore "./WorkerService1/WorkerService1.csproj"
+RUN dotnet restore "WorkerService1/WorkerService1.csproj"
 COPY . .
 WORKDIR "/src/WorkerService1"
-RUN dotnet build "./WorkerService1.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "WorkerService1.csproj" -c $configuration -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./WorkerService1.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+ARG configuration=Release
+RUN dotnet publish "WorkerService1.csproj" -c $configuration -o /app/publish /p:UseAppHost=false
 
-FROM mcr.microsoft.com/dotnet/runtime-deps:8.0 AS final
+FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["./WorkerService1"]
+ENTRYPOINT ["dotnet", "WorkerService1.dll"]
