--- a/WorkerService1/WorkerService1.csproj
+++ b/WorkerService1/WorkerService1.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <PublishAot>true</PublishAot>
+    <PublishAot>false</PublishAot>
+    <StripSymbols>true</StripSymbols>
     <UserSecretsId>dotnet-WorkerService1-87870757-30c9-476e-b6e6-cc0f1154c5c8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
@@ -14,4 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
+  <!-- <ItemGroup>
+    <LinkerArg Include="-llog" />
+    <LinkerArg Include="-fuse-ld=lld" />
+    <ExtraLinkerArgs Include="-fuse-ld=lld" />
+    <ExtraLinkerArgs Include="-llog" />
+  </ItemGroup> -->
 </Project>
